--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,48 @@
-{
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        
-
-    ]
+{ 
+    //Use IntelliSense to understand related attributes. 
+    //Hover to see descriptions of existing properties. 
+    //For more information, please visit: https://go.microsoft.com/fwlink/?linkid=830387 
+    "version" :  "0.2.0" , 
+    "configurations" :  [
+        {
+            "type": "java",
+            "name": "Jdbc",
+            "request": "launch",
+            "mainClass": "Jdbc",
+            "projectName": "vscodeProjectSetup_543afddb"
+        },
+        {
+            "type": "java",
+            "name": "Test",
+            "request": "launch",
+            "mainClass": "Test",
+            "projectName": "${workspaceRoot}/a.exe"
+        },
+        {
+            "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "App"
+        },
+        {
+            "name": "g++. exe-Generate and debug activity files",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "miDebuggerPath": "F:\\VScode\\mingw64\\bin\\gdb.exe",
+            "setupCommands": [
+                {
+                    "description": "Enable neat printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "C/C++: g++.exe build active file"
+        }
+    ] 
 }
